<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ParkingActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btnBackDesc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/parkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parkingLot"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/imgParkDetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/parkTitle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/parking_lot"
            android:contentDescription="@string/imgParkDetailsDesc"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgParkDetail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PIM"
        android:textSize="15sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toTopOf="@id/location"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceTag"
        android:textSize="15sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgParkDetail"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/A1"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A1"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintEnd_toStartOf="@id/A2"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/A2"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A2"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/A3"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A3"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintStart_toEndOf="@id/A2"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/A4"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A4"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintStart_toEndOf="@id/A5"
            app:layout_constraintTop_toBottomOf="@id/A3"/>

        <TextView
            android:id="@+id/A5"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A5"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/A2"/>

        <TextView
            android:id="@+id/A6"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/A6"
            android:textColor="@color/black"
            android:background="@drawable/spot_layout_green"
            app:layout_constraintEnd_toStartOf="@id/A5"
            app:layout_constraintTop_toBottomOf="@id/A1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>