<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_account"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainBackground"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/home_background"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/parkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parkText"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/chooseParkLot"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/parkText"
            app:layout_constraintStart_toStartOf="@id/parkText"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgParkLot"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:src="@drawable/parking_lot"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/chooseParkDesc"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parkingLot"
                    android:textColor="@color/black"
                    android:layout_margin="12dp"
                    app:layout_constraintTop_toBottomOf="@id/imgParkLot"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>